# setops_bench

./: .gitignore  .gitmodules  LICENSE  README.md  output  setops-bench.cabal  stack.yaml
app/: Main.hs
csv/: Main.hs
src/: Lib.hs
