name:                setops-bench
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/osa1/setops_bench
license:             BSD3
license-file:        LICENSE
author:              Omer Sinan Agacan
maintainer:          omeragacan@gmail
copyright:           2016 Omer Sinan Agacan
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Lib

  build-depends:
    base >= 4.7 && < 5,
    containers

  default-language:    Haskell2010

executable setops-bench-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2
  build-depends:
    base,
    containers,
    criterion,
    setops-bench

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/osa1/setops_bench
